bin/test/fixtures/public/fail/semantic/ourTests/checkIf.jmm
/*  REASON:
    Conditional expression of if must be boolean
*/

class BooleanOper {
    public static void main(String[] a) { 

        int b;
        int c;

        b = 1;
        c = 1;

        if(b+c){
        } else {

        }
    }
}
